fixing header alignment

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -27,6 +27,10 @@
         margin: .5rem;
     }
 
+    header nav ul li a {
+        flex: 1;
+    }
+
 
     #menuButton {
         display: none;
@@ -117,5 +121,8 @@
     .contactus #contactInfo {
         width: 30%;
         
+    }
+    footer {
+        font-size: 16px;
     }
 }
