--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -51,8 +51,8 @@ header div a img {
 
 header div {
     margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    
 }
 header div a {
     display: none;
@@ -131,7 +131,7 @@ main section p {
     width: 100%;
     height: auto;
     padding: 0;
-    background-image: 'text';
+    
     
 }
 
@@ -148,7 +148,7 @@ main section p {
    
 }
 .buttonAnchor {
-    color: var(--gray);
+    color: var(--dark);
     background-color: var(--paleBlue);    
     padding: .5rem;
     border-radius: .25rem;
@@ -171,6 +171,7 @@ main section p {
     margin: .5rem;
     padding: .5rem;
     border: 1px solid black;
+    background-color: var(--paleBlue);
 }
 
 #spotlights div h3 {
@@ -287,6 +288,7 @@ form legend {
     color: var(--dark);
     margin: 0 1rem;
     padding: 0 .5rem;
+    text-align: center;
 }
 
 form label.top, form div {
@@ -322,7 +324,7 @@ form input.submitBtn {
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
+    margin: auto;
     width: 96%;
     max-width: 20rem;
     
